<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" 
    tools:locale="en">
    
    <!-- General -->
    <string name="app_name">UNDP Survey</string>
    <string name="app_subtitle">Bangladesh</string>
    <string name="surveys">Surveys</string>
    <string name="survey">Survey</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="lorem">Lorem ipsum</string>
    <string name="lorem_long">Lorem ipsum sit amit delor</string>
    
    <!-- Error messages -->
    <string name="unknown_reason">Unknown error</string>
    <string name="error_parsing_response">Error parsing response</string>
    <string name="no_response">No response</string>
    
    <!-- Login screen -->
    <string name="login_text">Please login to begin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login unsuccessful</string>
    <string name="login_failed_must_connect">Login unsuccessful: you must be connected to login for the first time</string>
    <string name="login_failed_credentials_invalid">Offline login unsuccssful: you must perform a connected login</string>
    <string name="offline_login_failed">Offline login unsuccssful: you must be connected, or use the password last used on this phone</string>
    <string name="online_login_failed">Invalid username or password</string>
    <string name="online_login_error">Error logging in</string>
    <string name="logging_in">Authenticating&#8230;</string>
    
    <!-- Home screen -->
    <string name="home">Home</string>
    <string name="synchronise">Synchronise</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    
    <!-- Surveys screen -->
    <string name="no_surveys">No surveys available.</string>
    <string name="synchronise_hint">Try synchronising.</string>
    
    <!-- Synchronise screen -->
    <string name="synchronising_error">Error synchronising!</string>
    <string name="synchronising_success">Successfully synchronised!</string>
    <string name="synchronising_message">Synchronising&#8230;</string>
    <string name="synchronising_response_invalid">Response invalid</string>
    <string name="synchronising_login">You are offline, you must login in again while connected to the internet</string>
    <string name="submission_error">{0} submissions failed to synchronise!</string>
    
    <!-- Survey home screen -->
    <string name="create_submission">Create new response</string>
    <string name="partial_submissions">Draft responses</string>
    <string name="no_partial_submissions">You have no draft responses saved</string>
    <string name="partial_response">Draft response</string>
    <string name="delete_partial_response">Delete draft response</string>
    <string name="submitted_responses">Submitted responses</string>
    <string name="submitted_response_message">You have 1 submitted response. Please synchronise.</string>
    <string name="submitted_response_message_plural">You have {0} submitted responses. Please synchronise.</string>
    <string name="no_submitted_responses">You have no submitted responses</string>
    
    <!-- Edit response screen -->
    <string name="edit_response">Create new response</string>
    <string name="open_question_list">Open question list</string>
    <string name="close_question_list">Close question list</string>
    <string name="submit">Submit</string>
    <string name="save_draft">Save draft</string>
    <string name="question_list">Question list</string>
    <string name="discard_response">Discard Response</string>
    <string name="discard">Discard Changes</string>
    <string name="save_draft_query">Your response has not yet been submitted!</string>
    <string name="questions">Questions</string>
    <string name="question">Question</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="answer_required">Answer required</string>
    <string name="required_question_message">This question is required, and must be completed before the survey is submitted.</string>
    <string name="provide_answer">Complete now</string>
    <string name="later">Complete later</string>
    <string name="required">required</string>
    <string name="question_required">This question is required</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_submission">Confirm submission</string>
    <string name="confirm_submission_message">Once submitted, you will not be able to make any changes.</string>
    <string name="not_complete">You have not completed all the required questions!</string>
    <string name="response_submitted">Response submitted: please synchronise</string>
    <string name="no_questions">No questions!</string>
    
</resources>
